--- a/schedule.html
+++ b/schedule.html
@@ -1178,8 +1178,8 @@ href="./slides/EDUC641_6_history.pdf">pdf</a></li>
 <li>Data: <a href="./data/deathpenalty.csv">deathpenalty.csv</a> | <a
 href="./data/deathpenalty_codebook.pdf">codebook</a></li>
 <li>R code: <a href="./slides/EDUC641_4_code.R">R script</a></li>
-<li>Lab activities: <a href="./labs/Lab3.docx">Week 3 Lab</a>
-<!-- | [Week 4 Lab](./labs/Lab4.docx) --></li>
+<li>Lab activities: <a href="./labs/Lab3.docx">Week 3 Lab</a> | <a
+href="./labs/Lab4.docx">Week 4 Lab</a></li>
 </ul>
 <p>Assignment 2:</p>
 <ul>
