--- a/assignments.html
+++ b/assignments.html
@@ -945,7 +945,7 @@ Lectures
 <a href="./slides/EDUC641_6_history.html">6. Troubling history of stats</a>
 <a href="./slides/EDUC641_7_continuousdescr.html">7. Continuous descriptives I</a>
 <a href="./slides/EDUC641_7_continuousdescr.html">8. Continuous descriptives II</a>
-<span class="nav-dropdown-header">9. Transformations and z-scores</span>
+<a href="./slides/EDUC641_9_transformations.html">9. Transformations and z-scores</a>
 <span class="nav-dropdown-header">10. Normal distributions</span>
 <span class="nav-dropdown-header">11. CLT</span>
 <span class="nav-dropdown-header">12. Z- and t-tests</span>
@@ -1020,7 +1020,9 @@ Lectures
     <li>
       <a href="./slides/EDUC641_7_continuousdescr.html">8. Continuous descriptives II</a>
     </li>
-    <li class="dropdown-header">9. Transformations and z-scores</li>
+    <li>
+      <a href="./slides/EDUC641_9_transformations.html">9. Transformations and z-scores</a>
+    </li>
     <li class="dropdown-header">10. Normal distributions</li>
     <li class="dropdown-header">11. CLT</li>
     <li class="dropdown-header">12. Z- and t-tests</li>
@@ -1131,8 +1133,8 @@ and a statistical inference from a chi-squared statistic</p></li>
 <p>Deadline: October 25, 11:59pm</p>
 <p>Download: <a href="./assignments/assignment02.html">html file</a> |
 <a href="./data/cat.csv">cat.csv dataset</a></p>
-<!-- Key: 
- [doc file](./assignments/keys/assignment02_key.docx); [R script](./assignments/keys/assignment02_key.R) -->
+<p>Key: <a href="./assignments/keys/assignment02_key.docx">doc file</a>;
+<a href="./assignments/keys/assignment02_key.R">R script</a></p>
 </div>
 <div id="assignment-3" class="section level2">
 <h2>3.3. Assignment 3</h2>
@@ -1146,8 +1148,9 @@ class="math inline">\(t\)</span>-tests</p>
 class="math inline">\(t\)</span>-test</p></li>
 </ul>
 <p>Deadline: November 7, 11:59pm</p>
-<!-- Download: [html file](./assignments/assignment03.html) | [cont.csv dataset](./data/cont.csv)
-
+<p>Download: <a href="./assignments/assignment03.html">html file</a> |
+<a href="./data/cont.csv">cont.csv dataset</a></p>
+<!--
 Key: 
  [doc file](./assignments/keys/assignment03_key.docx); [R script](./assignments/keys/assignment03_key.R) -->
 </div>
