--- a/assignments/assignment03.html
+++ b/assignments/assignment03.html
@@ -500,21 +500,20 @@ the distribution of these particular variables in our sample? Explain
 and interpret in 1-2 sentences <strong>(1 point)</strong></p></li>
 </ul>
 </div>
-<div id="compare-observed-mean-of-vocabulary-to-population-mean" class="section level4">
-<h4>4. Compare observed mean of <em>vocabulary</em> to population
-mean</h4>
+<div id="compare-observed-mean-of-vocabulary-to-theoretical-population-mean" class="section level4">
+<h4>4. Compare observed mean of <em>vocabulary</em> to theoretical
+population mean</h4>
 <p>Assume that the test publisher informs you that the population mean
 of the teacher-level average score on this vocabulary test is 87 (again,
 we can’t truly know this, but play along). We want to know whether the
 observed mean of <em>vocabulary</em> in our sample is equal to the
 population mean.</p>
 <ul>
-<li>4.2. In one sentence, state your null-hypothesis. <strong>(1
+<li>4.1. In one sentence, state your null-hypothesis. <strong>(1
 point)</strong></li>
 <li>4.2. Conduct a one-sample <span class="math inline">\(t\)</span>-test. State the results of your test,
-including the alpha-threshold you have set and whether you have
-conducted a one- or two-tailed test and why. <strong>(2
-points)</strong></li>
+including the alpha-threshold you have set, whether you have conducted a
+one- or two-tailed test, and why. <strong>(2 points)</strong></li>
 <li>4.3. Write 2-3 sentences to interpret the results of your test in
 the preceding question. <strong>(2 points)</strong></li>
 </ul>
