--- a/schedule.html
+++ b/schedule.html
@@ -945,7 +945,7 @@ Lectures
 <a href="./slides/EDUC641_6_history.html">6. Troubling history of stats</a>
 <a href="./slides/EDUC641_7_continuousdescr.html">7. Continuous descriptives I</a>
 <a href="./slides/EDUC641_7_continuousdescr.html">8. Continuous descriptives II</a>
-<span class="nav-dropdown-header">9. Transformations and z-scores</span>
+<a href="./slides/EDUC641_9_transformations.html">9. Transformations and z-scores</a>
 <span class="nav-dropdown-header">10. Normal distributions</span>
 <span class="nav-dropdown-header">11. CLT</span>
 <span class="nav-dropdown-header">12. Z- and t-tests</span>
@@ -1020,7 +1020,9 @@ Lectures
     <li>
       <a href="./slides/EDUC641_7_continuousdescr.html">8. Continuous descriptives II</a>
     </li>
-    <li class="dropdown-header">9. Transformations and z-scores</li>
+    <li>
+      <a href="./slides/EDUC641_9_transformations.html">9. Transformations and z-scores</a>
+    </li>
     <li class="dropdown-header">10. Normal distributions</li>
     <li class="dropdown-header">11. CLT</li>
     <li class="dropdown-header">12. Z- and t-tests</li>
@@ -1239,26 +1241,29 @@ href="https://learningstatisticswithr.com/lsr-0.6.pdf">LSWR Chapter
 </ul>
 <p>Lecture slides:</p>
 <ul>
-<li><p>Classes 7-8 (10/22 &amp; 10/24) slides: <a
+<li>Classes 7-8 (10/22 &amp; 10/24) slides: <a
 href="./slides/EDUC641_7_continuousdescr.html">html</a> | <a
-href="./slides/EDUC641_7_continuousdescr.pdf">pdf</a> <!--
-- Class 9 (10/24) slides: [html](./slides/EDUC641_9_transformations.html) | [pdf](./slides/EDUC641_9_transformations.pdf)
+href="./slides/EDUC641_7_continuousdescr.pdf">pdf</a></li>
+<li>Class 9 (10/24) slides: <a
+href="./slides/EDUC641_9_transformations.html">html</a> | <a
+href="./slides/EDUC641_9_transformations.pdf">pdf</a></li>
+</ul>
+<!--
 - Classes 10-12 (10/26, 10/31, & 11/2) slides: [html](./slides/EDUC641_10_inference.html) | [pdf](./slides/EDUC641_10_inference.pdf)
---></p></li>
-<li><p>Data: <a
-href="./data/life_expectancy.csv">life_expectancy.csv</a> | <a
-href="./data/life_expectancy_codebook.pdf">codebook</a></p></li>
-<li><p>R code: <a href="./slides/EDUC641_7_code.R">Class 7 script</a>
-<!-- | [Class 9 script](./slides/EDUC641_9_code.R)
+-->
+<ul>
+<li>Data: <a href="./data/life_expectancy.csv">life_expectancy.csv</a> |
+<a href="./data/life_expectancy_codebook.pdf">codebook</a></li>
+<li>R code: <a href="./slides/EDUC641_7_code.R">Class 7 script</a> | <a
+href="./slides/EDUC641_9_code.R">Class 9 script</a> <!--
 - Lab activities: [Week 5 lab](./labs/Lab5.docx) | [Week 6 lab](./labs/Lab6.docx) | [Week 7 lab](./labs/Lab7.docx)
---></p></li>
+--></li>
 </ul>
 <p>Assignment 3:</p>
 <ul>
-<li>Due: November 7, 11:59p <!--
-- [html file](./assignments/assignment03.html)
-- [cont.csv dataset](./data/cont.csv)
---></li>
+<li>Due: November 7, 11:59p</li>
+<li><a href="./assignments/assignment03.html">html file</a></li>
+<li><a href="./data/cont.csv">cont.csv dataset</a></li>
 </ul>
 </div>
 <div id="unit-4" class="section level2">
