--- a/schedule.html
+++ b/schedule.html
@@ -1252,12 +1252,14 @@ href="./slides/EDUC641_9_transformations.pdf">pdf</a></li>
 - Classes 10-12 (10/31, 11/5, & 11/7) slides: [html](./slides/EDUC641_10_inference.html) | [pdf](./slides/EDUC641_10_inference.pdf)
 -->
 <ul>
-<li>Data: <a href="./data/life_expectancy.csv">life_expectancy.csv</a> |
-<a href="./data/life_expectancy_codebook.pdf">codebook</a></li>
-<li>R code: <a href="./slides/EDUC641_7_code.R">Class 7 script</a> | <a
-href="./slides/EDUC641_9_code.R">Class 9 script</a> <!--
-- Lab activities: [Week 5 lab](./labs/Lab5.docx) | [Week 6 lab](./labs/Lab6.docx) | [Week 7 lab](./labs/Lab7.docx)
---></li>
+<li><p>Data: <a
+href="./data/life_expectancy.csv">life_expectancy.csv</a> | <a
+href="./data/life_expectancy_codebook.pdf">codebook</a></p></li>
+<li><p>R code: <a href="./slides/EDUC641_7_code.R">Class 7 script</a> |
+<a href="./slides/EDUC641_9_code.R">Class 9 script</a></p></li>
+<li><p>Lab activities: <a href="./labs/Lab5.docx">Week 5 lab</a>
+<!-- | [Week 6 lab](./labs/Lab6.docx) | [Week 7 lab](./labs/Lab7.docx)
+--></p></li>
 </ul>
 <p>Assignment 3:</p>
 <ul>
