fix schedule layout

--- a/schedule.html
+++ b/schedule.html
@@ -1262,8 +1262,7 @@ href="./data/life_expectancy_codebook.pdf">codebook</a></p></li>
 <li><p>R code: <a href="./slides/EDUC641_7_code.R">Class 7 script</a> |
 <a href="./slides/EDUC641_9_code.R">Class 9 script</a></p></li>
 <li><p>Lab activities: <a href="./labs/Lab5.docx">Week 5 lab</a>
-<!-- | [Week 6 lab](./labs/Lab6.docx) | [Week 7 lab](./labs/Lab7.docx)
---></p></li>
+<!-- | [Week 6 lab](./labs/Lab6.docx) | [Week 7 lab](./labs/Lab7.docx) --></p></li>
 </ul>
 <p>Assignment 3:</p>
 <ul>
