--- a/assignments/assignment04.html
+++ b/assignments/assignment04.html
@@ -485,7 +485,7 @@ relationship between <span class="math inline">\(VOCABULARY\)</span> and
 <span class="math inline">\(COURSEWORK\)</span> in this way? Test
 whether your estimates satisfy these assumptions. <strong>(2
 points)</strong></p>
-<p>2.5 What is your answer to this research question? <strong>(2
+<p>2.5 What is your answer to the above research question? <strong>(2
 points)</strong></p>
 </div>
 </div>
