--- a/assignments.html
+++ b/assignments.html
@@ -949,7 +949,7 @@ Lectures
 <a href="./slides/EDUC641_10_inference.html">10. Normal distributions</a>
 <a href="./slides/EDUC641_10_inference.html">11. CLT</a>
 <a href="./slides/EDUC641_10_inference.html">12. Z- and t-tests</a>
-<span class="nav-dropdown-header">13. Continuous relationships</span>
+<a href="./slides/EDUC641_13_continuousrel.html">13. Continuous relationships</a>
 <span class="nav-dropdown-header">14. Bivariate regression I</span>
 <span class="nav-dropdown-header">15. Bivariate regression II</span>
 <span class="nav-dropdown-header">16. Bivariate regression III</span>
@@ -1032,7 +1032,9 @@ Lectures
     <li>
       <a href="./slides/EDUC641_10_inference.html">12. Z- and t-tests</a>
     </li>
-    <li class="dropdown-header">13. Continuous relationships</li>
+    <li>
+      <a href="./slides/EDUC641_13_continuousrel.html">13. Continuous relationships</a>
+    </li>
     <li class="dropdown-header">14. Bivariate regression I</li>
     <li class="dropdown-header">15. Bivariate regression II</li>
     <li class="dropdown-header">16. Bivariate regression III</li>
@@ -1156,9 +1158,8 @@ class="math inline">\(t\)</span>-test</p></li>
 <p>Deadline: November 8, 4:59pm</p>
 <p>Download: <a href="./assignments/assignment03.html">html file</a> |
 <a href="./data/cont.csv">cont.csv dataset</a></p>
-<!--
-Key: 
- [doc file](./assignments/keys/assignment03_key.docx); [R script](./assignments/keys/assignment03_key.R) -->
+<p>Key: <a href="./assignments/keys/assignment03_key.docx">doc file</a>;
+<a href="./assignments/keys/assignment03_key.R">R script</a></p>
 </div>
 <div id="assignment-4" class="section level2">
 <h2>3.4. Assignment 4</h2>
@@ -1173,8 +1174,9 @@ test of bivariate continuous relationship</p></li>
 estimation</p></li>
 </ul>
 <p>Deadline: December 2, 11:59pm</p>
-<!-- Download: [html file](./assignments/assignment04.html) | [cont.csv dataset](./data/cont.csv)
-
+<p>Download: <a href="./assignments/assignment04.html">html file</a> |
+<a href="./data/cont.csv">cont.csv dataset</a></p>
+<!-- 
 Key: 
  [doc file](./assignments/keys/assignment04_key.docx); [R script](./assignments/keys/assignment04_key.R) -->
 </div>
