--- a/schedule.html
+++ b/schedule.html
@@ -949,7 +949,7 @@ Lectures
 <a href="./slides/EDUC641_10_inference.html">10. Normal distributions</a>
 <a href="./slides/EDUC641_10_inference.html">11. CLT</a>
 <a href="./slides/EDUC641_10_inference.html">12. Z- and t-tests</a>
-<span class="nav-dropdown-header">13. Continuous relationships</span>
+<a href="./slides/EDUC641_13_continuousrel.html">13. Continuous relationships</a>
 <span class="nav-dropdown-header">14. Bivariate regression I</span>
 <span class="nav-dropdown-header">15. Bivariate regression II</span>
 <span class="nav-dropdown-header">16. Bivariate regression III</span>
@@ -1032,7 +1032,9 @@ Lectures
     <li>
       <a href="./slides/EDUC641_10_inference.html">12. Z- and t-tests</a>
     </li>
-    <li class="dropdown-header">13. Continuous relationships</li>
+    <li>
+      <a href="./slides/EDUC641_13_continuousrel.html">13. Continuous relationships</a>
+    </li>
     <li class="dropdown-header">14. Bivariate regression I</li>
     <li class="dropdown-header">15. Bivariate regression II</li>
     <li class="dropdown-header">16. Bivariate regression III</li>
@@ -1300,25 +1302,28 @@ and 15.2</a></p></li>
 holiday)</strong></p></li>
 </ul>
 <p>Lecture slides:</p>
-<!--
-- Class 13 (11/7) slides: [html](./slides/EDUC641_13_continuousrel.html) | [pdf](./slides/EDUC641_13_continuousrel.pdf)
-- Class 14 (11/14) slides: [html](./slides/EDUC641_14_regression.html) | [pdf](./slides/EDUC641_14_regression.pdf)
-- Class 15-16 slides (11/16 & 11/21): [html](./slides/EDUC641_15_regression2.html) | [pdf](./slides/EDUC641_15_regression2.pdf) 
-  + **No class on 11/23 (university holiday)**
-
-- Data:  [life_expectancy.csv](./data/life_expectancy.csv)
-- R code: [R script](./slides/EDUC641_13_code.R)
-- Lab activities: [Week 8 Lab](./labs/Lab8.docx) | [Week 9 Lab](./labs/Lab9.docx)
-
--->
-<p>Assignment 4:</p>
 <ul>
-<li>Due Dec. 2, 11:59pm</li>
+<li>Class 13 (11/7) slides: <a
+href="./slides/EDUC641_13_continuousrel.html">html</a> | <a
+href="./slides/EDUC641_13_continuousrel.pdf">pdf</a></li>
 </ul>
 <!--
- - [html file](./assignments/assignment04.html)
- - [cont.csv](./data/cont.csv)
--->
+- Class 14 (11/14) slides: [html](./slides/EDUC641_14_regression.html) | [pdf](./slides/EDUC641_14_regression.pdf)
+- Class 15-16 slides (11/16 & 11/21): [html](./slides/EDUC641_15_regression2.html) | [pdf](./slides/EDUC641_15_regression2.pdf) -->
+<ul>
+<li>Data: <a
+href="./data/life_expectancy.csv">life_expectancy.csv</a></li>
+<li>R code: <a href="./slides/EDUC641_13_code.R">R script</a> <!--
+- Lab activities: [Week 8 Lab](./labs/Lab8.docx) | [Week 9 Lab](./labs/Lab9.docx)
+
+--></li>
+</ul>
+<p>Assignment 4:</p>
+<ul>
+<li><p>Due Dec. 2, 11:59pm</p></li>
+<li><p><a href="./assignments/assignment04.html">html file</a></p></li>
+<li><p><a href="./data/cont.csv">cont.csv</a></p></li>
+</ul>
 </div>
 <div id="unit-5" class="section level2">
 <h2>Unit 5</h2>
