--- a/schedule.html
+++ b/schedule.html
@@ -1249,23 +1249,21 @@ href="https://learningstatisticswithr.com/lsr-0.6.pdf">LSWR Chapter
 </ul>
 <p>Lecture slides:</p>
 <ul>
-<li><p>Classes 7-8 (10/22 &amp; 10/24) slides: <a
+<li>Classes 7-8 (10/22 &amp; 10/24) slides: <a
 href="./slides/EDUC641_7_continuousdescr.html">html</a> | <a
-href="./slides/EDUC641_7_continuousdescr.pdf">pdf</a></p></li>
-<li><p>Class 9 (10/29) slides: <a
+href="./slides/EDUC641_7_continuousdescr.pdf">pdf</a></li>
+<li>Class 9 (10/29) slides: <a
 href="./slides/EDUC641_9_transformations.html">html</a> | <a
-href="./slides/EDUC641_9_transformations.pdf">pdf</a></p></li>
-<li><p>Classes 10-12 (10/31, 11/5, &amp; 11/7) slides: <a
+href="./slides/EDUC641_9_transformations.pdf">pdf</a></li>
+<li>Classes 10-12 (10/31, 11/5, &amp; 11/7) slides: <a
 href="./slides/EDUC641_10_inference.html">html</a> | <a
-href="./slides/EDUC641_10_inference.pdf">pdf</a></p></li>
-<li><p>Data: <a
-href="./data/life_expectancy.csv">life_expectancy.csv</a> | <a
-href="./data/life_expectancy_codebook.pdf">codebook</a></p></li>
-<li><p>R code: <a href="./slides/EDUC641_7_code.R">Class 7 script</a> |
-<a href="./slides/EDUC641_9_code.R">Class 9 script</a></p></li>
-<li><p>Lab activities: <a href="./labs/Lab5.docx">Week 5 lab</a> | <a
-href="./labs/Lab6.docx">Week 6 lab</a>
-<!-- | [Week 7 lab](./labs/Lab7.docx) --></p></li>
+href="./slides/EDUC641_10_inference.pdf">pdf</a></li>
+<li>Data: <a href="./data/life_expectancy.csv">life_expectancy.csv</a> |
+<a href="./data/life_expectancy_codebook.pdf">codebook</a></li>
+<li>R code: <a href="./slides/EDUC641_7_code.R">Class 7 script</a> | <a
+href="./slides/EDUC641_9_code.R">Class 9 script</a></li>
+<li>Lab activities: <a href="./labs/Lab5.docx">Week 5 lab</a> | <a
+href="./labs/Lab6.docx">Week 6 lab</a></li>
 </ul>
 <p>Assignment 3:</p>
 <ul>
@@ -1303,26 +1301,22 @@ holiday)</strong></p></li>
 </ul>
 <p>Lecture slides:</p>
 <ul>
-<li>Class 13 (11/7) slides: <a
+<li>Class 13 (11/12) slides: <a
 href="./slides/EDUC641_13_continuousrel.html">html</a> | <a
-href="./slides/EDUC641_13_continuousrel.pdf">pdf</a></li>
-</ul>
-<!--
+href="./slides/EDUC641_13_continuousrel.pdf">pdf</a> <!--
 - Class 14 (11/14) slides: [html](./slides/EDUC641_14_regression.html) | [pdf](./slides/EDUC641_14_regression.pdf)
-- Class 15-16 slides (11/16 & 11/21): [html](./slides/EDUC641_15_regression2.html) | [pdf](./slides/EDUC641_15_regression2.pdf) -->
-<ul>
+- Class 15-16 slides (11/16 & 11/21): [html](./slides/EDUC641_15_regression2.html) | [pdf](./slides/EDUC641_15_regression2.pdf) --></li>
 <li>Data: <a
 href="./data/life_expectancy.csv">life_expectancy.csv</a></li>
 <li>R code: <a href="./slides/EDUC641_13_code.R">R script</a> <!--
 - Lab activities: [Week 8 Lab](./labs/Lab8.docx) | [Week 9 Lab](./labs/Lab9.docx)
-
 --></li>
 </ul>
 <p>Assignment 4:</p>
 <ul>
-<li><p>Due Dec. 2, 11:59pm</p></li>
-<li><p><a href="./assignments/assignment04.html">html file</a></p></li>
-<li><p><a href="./data/cont.csv">cont.csv</a></p></li>
+<li>Due Dec. 2, 11:59pm</li>
+<li><a href="./assignments/assignment04.html">html file</a></li>
+<li><a href="./data/cont.csv">cont.csv</a></li>
 </ul>
 </div>
 <div id="unit-5" class="section level2">
