--- a/schedule.html
+++ b/schedule.html
@@ -950,7 +950,7 @@ Lectures
 <a href="./slides/EDUC641_10_inference.html">11. CLT</a>
 <a href="./slides/EDUC641_10_inference.html">12. Z- and t-tests</a>
 <a href="./slides/EDUC641_13_continuousrel.html">13. Continuous relationships</a>
-<span class="nav-dropdown-header">14. Bivariate regression I</span>
+<a href="./slides/EDUC641_14_regression.html">14. Bivariate regression I</a>
 <span class="nav-dropdown-header">15. Bivariate regression II</span>
 <span class="nav-dropdown-header">16. Bivariate regression III</span>
 <span class="nav-dropdown-header">17. NHST critiques</span>
@@ -1035,7 +1035,9 @@ Lectures
     <li>
       <a href="./slides/EDUC641_13_continuousrel.html">13. Continuous relationships</a>
     </li>
-    <li class="dropdown-header">14. Bivariate regression I</li>
+    <li>
+      <a href="./slides/EDUC641_14_regression.html">14. Bivariate regression I</a>
+    </li>
     <li class="dropdown-header">15. Bivariate regression II</li>
     <li class="dropdown-header">16. Bivariate regression III</li>
     <li class="dropdown-header">17. NHST critiques</li>
@@ -1303,14 +1305,16 @@ holiday)</strong></p></li>
 <ul>
 <li>Class 13 (11/12) slides: <a
 href="./slides/EDUC641_13_continuousrel.html">html</a> | <a
-href="./slides/EDUC641_13_continuousrel.pdf">pdf</a> <!--
-- Class 14 (11/14) slides: [html](./slides/EDUC641_14_regression.html) | [pdf](./slides/EDUC641_14_regression.pdf)
+href="./slides/EDUC641_13_continuousrel.pdf">pdf</a></li>
+<li>Class 14 (11/14) slides: <a
+href="./slides/EDUC641_14_regression.html">html</a> | <a
+href="./slides/EDUC641_14_regression.pdf">pdf</a> <!--
 - Class 15-16 slides (11/16 & 11/21): [html](./slides/EDUC641_15_regression2.html) | [pdf](./slides/EDUC641_15_regression2.pdf) --></li>
 <li>Data: <a
 href="./data/life_expectancy.csv">life_expectancy.csv</a></li>
-<li>R code: <a href="./slides/EDUC641_13_code.R">R script</a> <!--
-- Lab activities: [Week 8 Lab](./labs/Lab8.docx) | [Week 9 Lab](./labs/Lab9.docx)
---></li>
+<li>R code: <a href="./slides/EDUC641_13_code.R">R script</a></li>
+<li>Lab activities: <a href="./labs/Lab8.docx">Week 8 Lab</a> |
+<!-- [Week 9 Lab](./labs/Lab9.docx) --></li>
 </ul>
 <p>Assignment 4:</p>
 <ul>
