--- a/slides/EDUC641_15_regression2.html
+++ b/slides/EDUC641_15_regression2.html
@@ -60,9 +60,11 @@ class: center, middle, inverse, title-slide
 ---
 # Materials
 
-### 1. Life expectancy data (in file called life_expectancy.csv)
-### 2. Codebook describing the contents of said data
-### 3. R script to conduct the data analytic tasks of the unit (in file called EDUC641_13_code.R)
+.large[
+1. Life expectancy data (in file called life_expectancy.csv)
+2. Codebook describing the contents of said data
+3. R script to conduct the data analytic tasks of the unit (in file called EDUC641_13_code.R)
+]
 
 ---
 class: middle, inverse
@@ -109,7 +111,7 @@ biv &lt;- ggplot(data = who, aes(x = schooling, y = life_expectancy)) +
 These .red-pink[**coefficients**] tell you where the fitted trend line should be drawn:
 $$
 \small{
-\left[ \textrm{Predicted value of } LIFE\_EXPECTANCY\right]  = 
+\left[ \textrm{Predicted value of } LIFE\\_EXPECTANCY \right]  = 
 \left( 42.85 \right) + 2.23 * \left[ \textrm{Observed value of }SCHOOLING  \right] 
 }
 $$
@@ -142,7 +144,7 @@ Note that the fitted line always goes through the average of the predictors
 Each term in the regression equation has a specific interpretation
 
 $$
-\hat{LIFEEXPECTANCY} = 42.85 + 2.23 * \left( SCHOOLING \right)
+\hat{LIFE\\_EXPECTANCY} = 42.85 + 2.23 * \left( SCHOOLING \right)
 $$
 
 ---
@@ -151,7 +153,7 @@ $$
 Each term in the regression equation has a specific interpretation:
 
 $$
-\color{red}{\hat{LIFEEXPECTANCY}} = 42.85 + 2.23 * \left( SCHOOLING \right)
+\color{red}{\hat{LIFE\\_EXPECTANCY}} = 42.85 + 2.23 * \left( SCHOOLING \right)
 $$
 
 The predicted value of `\(\color{red}{\hat{LIFE\_EXPECTANCY}}\)` is based on the OLS regression fit. Its "hat" represents that it is a prediction.
@@ -162,7 +164,7 @@ The predicted value of `\(\color{red}{\hat{LIFE\_EXPECTANCY}}\)` is based on the
 Each term in the regression equation has a specific interpretation:
 
 $$
-\hat{LIFEEXPECTANCY} = \color{red}{42.85} + 2.23 * \left( SCHOOLING \right)
+\hat{LIFE\\_EXPECTANCY} = \color{red}{42.85} + 2.23 * \left( SCHOOLING \right)
 $$
 
 42.85 represents the .red[**estimated intercept**]. It tells you the predicted value of `\(LIFE\_EXPECTANCY\)` when `\(SCHOOLING\)` is zero (0)
@@ -175,7 +177,7 @@ $$
 Each term in the regression equation has a specific interpretation:
 
 $$
-\hat{LIFEEXPECTANCY} = 42.85 + \color{red}{2.23} * \left( SCHOOLING \right)
+\hat{LIFE\\_EXPECTANCY} = 42.85 + \color{red}{2.23} * \left( SCHOOLING \right)
 $$
 
 --
@@ -996,16 +998,12 @@ class: middle, inverse
 - LSWR Chapter 15.1 and 15.2: bivariate regression by **Nov. 21**
 
 ### Assignments
-- Quiz #5 on **November 21** (due Nov. 22 at 5pm)
-- Assignment #4 due **November 27** at 11:59PM
-- Final assignment due **December 6** at 11:59PM
+- Quiz #5 due **November 27** at 5pm
+- Assignment #4 due **December 2** at 11:59PM
+- Final assignment due **December 11** at 4:59PM
 
-### No lab on 11/22 or 11/23! No class on 11/23!
+### No lab on 11/27 or 11/28! Lab replaces class on 11/26!
 
----
-class: middle, inverse
-
-# Quiz
     </textarea>
 <style data-target="print-only">@media screen {.remark-slide-container{display:block;}.remark-slide-scaler{box-shadow:none;}}</style>
 <script src="https://remarkjs.com/downloads/remark-latest.min.js"></script>
