--- a/schedule.html
+++ b/schedule.html
@@ -951,8 +951,8 @@ Lectures
 <a href="./slides/EDUC641_10_inference.html">12. Z- and t-tests</a>
 <a href="./slides/EDUC641_13_continuousrel.html">13. Continuous relationships</a>
 <a href="./slides/EDUC641_14_regression.html">14. Bivariate regression I</a>
-<span class="nav-dropdown-header">15. Bivariate regression II</span>
-<span class="nav-dropdown-header">16. Bivariate regression III</span>
+<a href="./slides/EDUC641_15_regression2.html">15. Bivariate regression II</a>
+<a href="./slides/EDUC641_15_regression2.html">16. Bivariate regression III</a>
 <span class="nav-dropdown-header">17. NHST critiques</span>
 <span class="nav-dropdown-header">18. NHST critiques and summary</span>
 </div>
@@ -1038,8 +1038,12 @@ Lectures
     <li>
       <a href="./slides/EDUC641_14_regression.html">14. Bivariate regression I</a>
     </li>
-    <li class="dropdown-header">15. Bivariate regression II</li>
-    <li class="dropdown-header">16. Bivariate regression III</li>
+    <li>
+      <a href="./slides/EDUC641_15_regression2.html">15. Bivariate regression II</a>
+    </li>
+    <li>
+      <a href="./slides/EDUC641_15_regression2.html">16. Bivariate regression III</a>
+    </li>
     <li class="dropdown-header">17. NHST critiques</li>
     <li class="dropdown-header">18. NHST critiques and summary</li>
   </ul>
@@ -1308,8 +1312,10 @@ href="./slides/EDUC641_13_continuousrel.html">html</a> | <a
 href="./slides/EDUC641_13_continuousrel.pdf">pdf</a></li>
 <li>Class 14 (11/14) slides: <a
 href="./slides/EDUC641_14_regression.html">html</a> | <a
-href="./slides/EDUC641_14_regression.pdf">pdf</a> <!--
-- Class 15-16 slides (11/16 & 11/21): [html](./slides/EDUC641_15_regression2.html) | [pdf](./slides/EDUC641_15_regression2.pdf) --></li>
+href="./slides/EDUC641_14_regression.pdf">pdf</a></li>
+<li>Class 15-16 slides (11/19 &amp; 11/21): <a
+href="./slides/EDUC641_15_regression2.html">html</a> | <a
+href="./slides/EDUC641_15_regression2.pdf">pdf</a></li>
 <li>Data: <a
 href="./data/life_expectancy.csv">life_expectancy.csv</a></li>
 <li>R code: <a href="./slides/EDUC641_13_code.R">R script</a></li>
