--- a/schedule.html
+++ b/schedule.html
@@ -1319,8 +1319,8 @@ href="./slides/EDUC641_15_regression2.pdf">pdf</a></li>
 <li>Data: <a
 href="./data/life_expectancy.csv">life_expectancy.csv</a></li>
 <li>R code: <a href="./slides/EDUC641_13_code.R">R script</a></li>
-<li>Lab activities: <a href="./labs/Lab7.docx">Week 7 Lab</a> |
-<!-- [Week 8 Lab](./labs/Lab8.docx) --></li>
+<li>Lab activities: <a href="./labs/Lab7.docx">Week 7 Lab</a> | <a
+href="./labs/Lab8.docx">Week 8 Lab</a></li>
 </ul>
 <p>Assignment 4:</p>
 <ul>
