--- a/slides/EDUC641_15_regression2.html
+++ b/slides/EDUC641_15_regression2.html
@@ -199,7 +199,7 @@ We do **NOT** say that increasing the average years that children attend school 
 Each term in the regression equation has a specific interpretation:
 
 $$
-\hat{LIFEEXPECTANCY} = 42.85 + 2.23 * \left( \color{red}{SCHOOLING} \right)
+\hat{LIFE\\_EXPECTANCY} = 42.85 + 2.23 * \left( \color{red}{SCHOOLING} \right)
 $$
 
 --
@@ -226,7 +226,7 @@ Could we have gotten a slope value of 2.23 by sampling from a population in whic
 ---
 # Regression inference
 
-What is the probability that we would have gotten a slope value of 2.23 by sampling from a population in which there was **no relationship** between `\(LIFE\_EXPECTANCY\)` and `\(SCHOOLING\)`?
+What is the probability that we would have gotten a slope value of 2.23 (or a more extreme value) by sampling from a population in which there was **no relationship** between `\(LIFE\_EXPECTANCY\)` and `\(SCHOOLING\)`?
 
 
 ```
